# PressLogParser

./: .gitignore  README.md  app.py  pyproject.toml
docs/: README.de.md  README.zh.md
src/: log_parser.py  ui_components.py
tests/: test_parser.py  test_ui_components.py
